--- a/index.html
+++ b/index.html
@@ -1,37 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap 4 CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>Landmarks</title>
 </head>
+
 <body>
 
-    <div class="container">
+    <section id=pealeht style="text-align: center;margin-left: 120px; margin-top: 60px;">
 
         <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-12">A landmark</div>
-            <div class="col-lg-3 col-md-6 col-sm-12">A landmark</div>
-            <div class="col-lg-3 col-md-6 col-sm-12">A landmark</div>
-            <div class="col-lg-3 col-md-6 col-sm-12">A landmark</div>
+            <a href="landmark1.html"><img
+                    src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                    style="margin-bottom: 30px; margin-right: 30px;" alt="CSGO logo" height="250" width="400">
+
+
+
+                <a href="landmark1.html"><img
+                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                        style="margin-bottom: 30px; margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
+
+                <a href="landmark1.html"><img
+                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                        style="margin-bottom: 30px;margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
+
+
+                <a href="landmark1.html"><img
+                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                        style="margin-bottom: 30px;margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
+
+
+                <a href="landmark1.html"><img
+                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                        style="margin-bottom: 30px;margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
+
+
+                <a href="landmark1.html"><img
+                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                        style="margin-bottom: 30px;margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
+
+
+                <a href="landmark1.html"><img
+                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                        style="margin-bottom: 30px;margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
+
+                <a href="landmark1.html"><img
+                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                        style="margin-bottom: 30px;margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
+
         </div>
 
-        <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-12">A landmark</div>
-            <div class="col-lg-3 col-md-6 col-sm-12">A landmark</div>
-            <div class="col-lg-3 col-md-6 col-sm-12">A landmark</div>
-            <div class="col-lg-3 col-md-6 col-sm-12">A landmark</div>
         </div>
 
-    </div>
+    </section>
 
+    <!-- Bootstrap 4 Bundle with Popper -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 
-<!-- Bootstrap 4 Bundle with Popper -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <footer>
+        <p style="text-align: center;"> Copyright &copy; 2021</p>
+    </footer>
+
 </body>
+
 </html>
