--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
     <section id=pealeht style="text-align: center;margin-left: 120px; margin-top: 60px;">
 
         <div class="row">
-            <a href="landmark1.html"><img
-                    src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                    style="margin-bottom: 30px; margin-right: 30px;" alt="CSGO logo" height="250" width="400">
 
+            <div>
+                
+                <a href="landmark1.html"><img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg" style="margin-bottom: 30px; margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
+                <h4>Landmark 1</h4>
+
+            </div>
+            
 
 
                 <a href="landmark1.html"><img
