--- a/index.html
+++ b/index.html
@@ -19,47 +19,78 @@
         <div class="row">
 
             <div>
-                
-                <a href="landmark1.html"><img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg" style="margin-bottom: 30px; margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
-                <h4>Landmark 1</h4>
+                <a href="landmark1.html"><img
+                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                        style="margin-bottom: 30px; margin-right: 30px;" alt="landmark logo" height="250"
+                        width="400"></a>
 
+                <h4 style="margin-bottom: 30px;margin-top: -20px;">Landmark 1</h4>
+                </p>
             </div>
-            
 
+
+
+            <div>
+                <a href="landmark1.html"><img
+                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                        style="margin-bottom: 30px; margin-right: 30px;" alt="landmark logo" height="250"
+                        width="400"></a>
+                <h4 style="margin-top: -20px;">Landmark 1</h4>
+            </div>
+
+            <div>
+                <a href="landmark1.html"><img
+                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                        style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250"
+                        width="400"></a>
+                <h4 style="margin-top: -20px;">Landmark 1</h4>
+            </div>
+
+
+
+            <div>
 
                 <a href="landmark1.html"><img
                         src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px; margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
+                        style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250"
+                        width="400"></a>
+                <h4 style="margin-top: -20px;">Landmark 1</h4>
+            </div>
 
+
+            <div>
                 <a href="landmark1.html"><img
                         src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px;margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
+                        style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250"
+                        width="400"></a>
+                <h4>Landmark 1</h4>
+            </div>
 
 
+            <div>
                 <a href="landmark1.html"><img
                         src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px;margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
+                        style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250"
+                        width="400"></a>
+                <h4>Landmark 1</h4>
+            </div>
 
 
+            <div>
                 <a href="landmark1.html"><img
                         src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px;margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
+                        style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250"
+                        width="400"></a>
+                <h4>Landmark 1</h4>
+            </div>
 
-
+            <div>
                 <a href="landmark1.html"><img
                         src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px;margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
-
-
-                <a href="landmark1.html"><img
-                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px;margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
-
-                <a href="landmark1.html"><img
-                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px;margin-right: 30px;" alt="CSGO logo" height="250" width="400"></a>
-
-        </div>
+                        style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250"
+                        width="400"></a>
+                <h4>Landmark 1</h4>
+            </div>
 
         </div>
 
@@ -74,7 +105,7 @@
         crossorigin="anonymous"></script>
 
     <footer>
-        <p style="text-align: center;"> Copyright &copy; 2021</p>
+        <p style="text-align: center;margin-top: 200px;"> Copyright &copy; 2021</p>
     </footer>
 
 </body>
