--- a/landmark1.html
+++ b/landmark1.html
@@ -14,40 +14,36 @@
 
 <body>
 
-    <section id=page1>
-        <div class="row">
-            <p style="margin-right: 800px;margin-top: 20;">
-            <h1>NAME OF LANDMARK</h1>
-            </p>
-        </div>
-    </section>
 
-    <section id=page1>
-        <div class="container">
-            <p style="margin-left:-390px;margin-top: 50px;">
-                <img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                    alt="landmark1" height="500" width="700">
-            </p>
-        </div>
-    </section>
-    <aside>
-        <div class="container">
-            <div class="text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit fuga
-                    assumenda
-                    maxime officiis
-                    ad suscipit sint? Blanditiis fuga, nisi cum repudiandae delectus corporis ullam ut dolore sed
-                    necessitatibus voluptas vitae sint aliquid quasi! Doloremque ab, rem earum excepturi facilis odio
-                    animi laboriosam architecto eos quod dolorum distinctio nostrum deleniti.
+    <div class="row">
+        <p style="margin-right: 800px;margin-top: 20;">
+        <h1>NAME OF LANDMARK</h1>
+        </p>
+    </div>
 
-                </p>
-            </div>
-    </aside>
+
+
+    <div class="container">
+        <p style="margin-left:-390px;margin-top: 50px;">
+            <img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                alt="landmark1" height="500" width="700">
+        </p>
+    </div>
+
+
+    <div class="col-lg-6 col-sm-12">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit fuga
+        assumenda
+        maxime officiis
+        ad suscipit sint? Blanditiis fuga, nisi cum repudiandae delectus corporis ullam ut dolore sed
+        necessitatibus voluptas vitae sint aliquid quasi! Doloremque ab, rem earum excepturi facilis odio
+        animi laboriosam architecto eos quod dolorum distinctio nostrum deleniti.
     </div>
 
     <section>
         <div>
-            <p style="text-align: right;margin-right: 100px;"><a href="index.html"><button type="button">Main
+            <p style="text-align: right;margin-right: 100px;margin-top: 60px;"><a href="index.html"><button
+                        type="button">Main
                         Page</button></a></p>
         </div>
     </section>
