--- a/landmark1.html
+++ b/landmark1.html
@@ -14,39 +14,30 @@
 
 <body>
 
+    <header>
+        <div class="row">
+            <p style="margin-right: 800px;margin-top: 20;">
+            <h1>NAME OF LANDMARK</h1>
+            </p>
+        </div>
+    </header>
 
-    <div class="row">
-        <p style="margin-right: 800px;margin-top: 20;">
-        <h1>NAME OF LANDMARK</h1>
-        </p>
-    </div>
-
-
-
-    <div class="container">
-        <p style="margin-left:-390px;margin-top: 50px;">
-            <img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                alt="landmark1" height="500" width="700">
-        </p>
-    </div>
-
-
-    <div class="col-lg-6 col-sm-12">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit fuga
-        assumenda
-        maxime officiis
-        ad suscipit sint? Blanditiis fuga, nisi cum repudiandae delectus corporis ullam ut dolore sed
-        necessitatibus voluptas vitae sint aliquid quasi! Doloremque ab, rem earum excepturi facilis odio
-        animi laboriosam architecto eos quod dolorum distinctio nostrum deleniti.
-    </div>
 
     <section>
-        <div>
-            <p style="text-align: right;margin-right: 100px;margin-top: 60px;"><a href="index.html"><button
-                        type="button">Main
-                        Page</button></a></p>
+        <div class="container">
+            <img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
+                style="margin-left:-390px;margin-top: 50px;" alt="landmark1" height="500" width="700">
         </div>
     </section>
+
+
+    <aside>
+        <div class="container">
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero itaque,
+                quaerat, est a cupiditate, perspiciatis eaque facere tempore distinctio sint ipsum. Fugiat error
+                pariatur commodi neque exercitationem laboriosam facilis eveniet.</h4>
+        </div>
+    </aside>
 
 
 
