--- a/landmark1.html
+++ b/landmark1.html
@@ -24,20 +24,22 @@
 
 
     <section>
-        <div class="container">
+        <div class="row">
             <img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                style="margin-left:-390px;margin-top: 50px;" alt="landmark1" height="500" width="700">
+                style="margin-top: 50px;margin-right: 30px;margin-left: 30px;" alt="landmark1" height="500" width="700">
+
+
+            <div class="col" style="padding-top: 200px;">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur distinctio, quos animi rem
+                    fugiat voluptatibus facere asperiores perferendis molestias. Commodi a atque incidunt quibusdam
+                    quisquam officia, in necessitatibus eaque rerum?</h4>
+
+            </div>
         </div>
     </section>
 
 
-    <aside>
-        <div class="container">
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero itaque,
-                quaerat, est a cupiditate, perspiciatis eaque facere tempore distinctio sint ipsum. Fugiat error
-                pariatur commodi neque exercitationem laboriosam facilis eveniet.</h4>
-        </div>
-    </aside>
+
 
 
 
@@ -49,8 +51,10 @@
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
 
+    <a href="index.html"><button type="button" style="margin-left: 1600px;">Main Menu</button></a>
+
     <footer>
-        <p style="text-align: center;"> Copyright &copy; 2021</p>
+        <p style=" text-align: center;padding-top: 200px;"> Copyright &copy; 2021</p>
     </footer>
 
 </body>
