--- a/starting_html/index.html
+++ b/starting_html/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap 4 CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>Landmarks</title>
 </head>
 
@@ -19,10 +18,7 @@
         <div class="row">
 
             <div>
-                <a href="landmark1.html"><img
-                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px; margin-right: 30px;" alt="landmark logo" height="250"
-                        width="400"></a>
+                <a href="landmark1.html"><img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg" style="margin-bottom: 30px; margin-right: 30px;" alt="landmark logo" height="250" width="400"></a>
 
                 <h4 style="margin-bottom: 30px;margin-top: -20px;">Landmark 1</h4>
                 </p>
@@ -31,18 +27,12 @@
 
 
             <div>
-                <a href="landmark1.html"><img
-                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px; margin-right: 30px;" alt="landmark logo" height="250"
-                        width="400"></a>
+                <a href="landmark1.html"><img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg" style="margin-bottom: 30px; margin-right: 30px;" alt="landmark logo" height="250" width="400"></a>
                 <h4 style="margin-top: -20px;">Landmark 1</h4>
             </div>
 
             <div>
-                <a href="landmark1.html"><img
-                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250"
-                        width="400"></a>
+                <a href="landmark1.html"><img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg" style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250" width="400"></a>
                 <h4 style="margin-top: -20px;">Landmark 1</h4>
             </div>
 
@@ -50,45 +40,30 @@
 
             <div>
 
-                <a href="landmark1.html"><img
-                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250"
-                        width="400"></a>
+                <a href="landmark1.html"><img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg" style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250" width="400"></a>
                 <h4 style="margin-top: -20px;">Landmark 1</h4>
             </div>
 
 
             <div>
-                <a href="landmark1.html"><img
-                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250"
-                        width="400"></a>
+                <a href="landmark1.html"><img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg" style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250" width="400"></a>
                 <h4>Landmark 1</h4>
             </div>
 
 
             <div>
-                <a href="landmark1.html"><img
-                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250"
-                        width="400"></a>
+                <a href="landmark1.html"><img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg" style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250" width="400"></a>
                 <h4>Landmark 1</h4>
             </div>
 
 
             <div>
-                <a href="landmark1.html"><img
-                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250"
-                        width="400"></a>
+                <a href="landmark1.html"><img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg" style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250" width="400"></a>
                 <h4>Landmark 1</h4>
             </div>
 
             <div>
-                <a href="landmark1.html"><img
-                        src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                        style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250"
-                        width="400"></a>
+                <a href="landmark1.html"><img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg" style="margin-bottom: 30px;margin-right: 30px;" alt="landmark logo" height="250" width="400"></a>
                 <h4>Landmark 1</h4>
             </div>
 
@@ -97,12 +72,8 @@
     </section>
 
     <!-- Bootstrap 4 Bundle with Popper -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
     <footer>
         <p style="text-align: center;margin-top: 200px;"> Copyright &copy; 2021</p>
