--- a/starting_html/landmark1.html
+++ b/starting_html/landmark1.html
@@ -5,56 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
     <!-- Bootstrap 4 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <link rel="stylesheet" href="landmark1.css">
     <title>Landmarks</title>
 </head>
 
 <body>
 
     <header>
-        <div class="row">
-            <p style="margin-right: 800px;margin-top: 20;">
+        <div class="header">
+            <p>
             <h1>NAME OF LANDMARK</h1>
             </p>
         </div>
     </header>
 
-
-    <section>
         <div class="row">
             <img src="https://www.worldatlas.com/r/w1200/upload/56/fb/ee/alaska-mountain-range-csnafzger.jpg"
-                style="margin-top: 50px;margin-right: 30px;margin-left: 30px;" alt="landmark1" height="500" width="700">
+                alt="landmark1">
 
 
-            <div class="col" style="padding-top: 200px;">
+            <div class="col-sm">
                 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur distinctio, quos animi rem
                     fugiat voluptatibus facere asperiores perferendis molestias. Commodi a atque incidunt quibusdam
                     quisquam officia, in necessitatibus eaque rerum?</h4>
 
             </div>
         </div>
-    </section>
-
-
-
-
-
-
-    <!-- Bootstrap 4 Bundle with Popper -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-
-    <a href="index.html"><button type="button" style="margin-left: 1600px;">Main Menu</button></a>
+    
+    <a href="index.html"><button type="button">Main Menu</button>
+    </a>
 
     <footer>
-        <p style=" text-align: center;padding-top: 200px;"> Copyright &copy; 2021</p>
+        <p>Copyright &copy; 2021</p>
     </footer>
 
 </body>
